--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,4 +7,10 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <Button
+        android:id="@+id/useFunction"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="startAPICall"
+        android:text="lookup_address" />
 </LinearLayout>
